# kubernetes-operators

./: .gitignore  README.md
backup-operator/: README.md
buildingblock-operator/: README.md
certificate-operator/: README.md
disco/: Dockerfile  Gopkg.toml  Makefile  PROJECT  README.md  glide.yaml  go.mod  go.sum  main.go
example/: Dockerfile  Makefile  README.md  glide.yaml
externalip/: .dockerignore  Dockerfile  Makefile  README.md  glide.yaml  go.mod  go.sum
helm-garbagecollector/: Dockerfile  Makefile  README.md
keystone-operator/: Dockerfile  Makefile  README.md  glide.yaml
kube-fip-controller/: Dockerfile  Makefile  README.md  go.mod  (+1 more)
vcenter-operator/: .dockerignore  Dockerfile  MANIFEST.in  README.rst  build.sh  requirements.txt  setup.cfg  setup.py
vcenter-operator/vcenter_operator/: cmd.py  configurator.py  discovery.py  masterpassword.py  phelm.py  templates.py  vcenter_util.py
vcenter-operator/vcenter_operator/templates/: vcenter_cluster.yaml  vcenter_cluster.yaml.j2  vcenter_cluster_hypervisor_configmap.yaml.j2  vcenter_cluster_hypervisor_deployment.yaml.j2  vcenter_datacenter.yaml  vcenter_datacenter.yaml.j2  vcenter_datacenter_cinder_configmap.yaml.j2  vcenter_datacenter_cinder_deployment.yaml.j2
vcenter-operator/vcenter_operator/templates/cluster/mixed/: deployment.yaml.j2
vcenter-operator/vcenter_operator/templates/cluster/neutron/: configmap.yaml.j2
vcenter-operator/vcenter_operator/templates/cluster/nova/: configmap.yaml.j2
vcenter-operator/vcenter_operator/templates/vcenter/cinder/: configmap.yaml.j2  deployment.yaml.j2
(+317 files in other folders)
